# fastapi_docs

./: .gitignore  requirements.txt  setup.py
.github/: ci.yml
fastapi_docs/: __init__.py  main.py  pyproject.toml  req_model.py
fastapi_docs/tests/: test_app.py
