[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "docs"
authors = ["luqmancode <luqmandepy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.0"}
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pyaml = "^23.12.0"
anyio = "^4.3.0"
pytest-asyncio = "^0.23.6"
pytest-trio = "^0.8.0"
pytest-tornasync = "^0.6.0.post2"
pytest-twisted = "^1.14.1"
twisted = "^24.3.0"
gunicorn = "^22.0.0"
trio = "^0.25.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
pytest = "^8.0.2"
mypy = "^1.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
